# multisig-server

./: Cargo.toml  README.md
migrations/2020-12-22-014857_wallets/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
