[package]
name = "multisig-server"
version = "0.1.0"
authors = ["Aki <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
